# nlpia

./: .pre-commit-config.yaml  README.md  pyproject.toml
lsa/: lsa.py
nlpia/: doc_search.py  lemmatizer.py
semantic/: thoughtexp.py
tests/: test_lemmatizer.py  test_lsa.py  test_tfidf.py
tfidf/: tfidf.py
