[tool.poetry]
name = "nlpia"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.20.3"
spacy = "^3.0.6"
en-core-web-sm = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.0.0/en_core_web_sm-3.0.0-py3-none-any.whl"}
scikit-learn = "^0.24.2"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
pytest = "^6.2.4"
black = "^21.6b0"
pre-commit = "^2.13.0"
matplotlib = "^3.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
